## VALIDAR QUE NÃO É EXIBIDO NENHUM CARD QUANDO O CLIENTE NĀO TEM NENHUMA SIMULAÇĀO PENDENTE

appId: br.com.carrefour.cartaocarrefour.mock
onFlowStart:
  - runFlow: .maestro/common/doLogin.yaml
  - runFlow:
      file: .maestro/common/selectMenuOption.yaml
      env:
        INDEX: 2
        TITLE: Minhas simulações (Novo)
---

- assertVisible:
    id: illustration
- assertVisible: Você ainda não possui nenhuma simulação pendente.
- assertVisible: Faça uma simulação do Parcelamento e fique com as contas em dia.
- tapOn: Simular um parcelamento
- assertVisible: O que você quer parcelar?
